Installer creation working in limited scenarios - OSX only